New color palette. New view to show colors.

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -60,6 +60,7 @@
                     "form",
                     "buttons",
                     "icons",
+                    "colors",
                     "test"
                 ]
             }).init();
@@ -73,6 +74,7 @@
             app.route("^#icons", app.view("icons"));
             app.route("^#uinavbar", app.view("uinavbar"));
             app.route("^#test", app.view("test"));
+            app.route("^#colors", app.view("colors"));
             
         }());
     
