--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="initial-scale = 1.0, user-scalable = no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
-  <link rel="stylesheet" href="../../dist/css/mootor.css">
-  <link rel="stylesheet" href="../../dist/css/color.css">
+  <link rel="stylesheet" href="../../source/css/mootor.css">
+  <link rel="stylesheet" href="../../source/css/color.css">
 
   <script type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script type="text/javascript" src="../../dist/js/clickfix.js"></script>
