--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -61,6 +61,7 @@
                     "buttons",
                     "icons",
                     "colors",
+                    "text",
                     "test"
                 ]
             });
@@ -75,6 +76,7 @@
             app.route("^#uinavbar", app.view("uinavbar"));
             app.route("^#test", app.view("test"));
             app.route("^#colors", app.view("colors"));
+            app.route("^#text", app.view("text"));
             
             app.init();
             
