--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -9,13 +9,11 @@
 
   <link rel="stylesheet" href="../../source/css/mootor.css">
   <link rel="stylesheet" href="../../source/css/color.css">
-  
 
   <script defer type="text/javascript" src="../../dist/js/zepto.js"></script>
-  <script defer type="text/javascript" src="../../dist/js/clickfix.js"></script>
   <script defer type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
   <script defer type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
-  <script defer type="text/javascript" src="../../source/js/overthrow.min.js"></script>
+  <script defer type="text/javascript" src="../../source/js/clickfix.js"></script>
   <script defer type="text/javascript" src="../../source/js/mootor.js"></script>
   <script defer type="text/javascript" src="../../source/js/event.js"></script>
   <script defer type="text/javascript" src="../../source/js/context.js"></script>
