--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -14,6 +14,7 @@
   <script defer type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
   <script defer type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
   <script defer type="text/javascript" src="../../source/js/clickfix.js"></script>
+  <script defer type="text/javascript" src="../../source/js/scrollfix.js"></script>
   <script defer type="text/javascript" src="../../source/js/mootor.js"></script>
   <script defer type="text/javascript" src="../../source/js/event.js"></script>
   <script defer type="text/javascript" src="../../source/js/context.js"></script>
