--- a/demo/index.html
+++ b/demo/index.html
@@ -10,37 +10,12 @@
   <link rel="stylesheet" href="dist/css/mootor.css">
   <link rel="stylesheet" href="dist/css/color.css">
   
-
   <script defer type="text/javascript" src="dist/js/zepto.js"></script>
-  <script defer type="text/javascript" src="dist/js/clickfix.js"></script>
   <script defer type="text/javascript" src="dist/js/zepto-touch.js"></script>
   <script defer type="text/javascript" src="dist/js/zepto-detect.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/overthrow.min.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/mootor.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/event.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/context.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/app.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/view.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/ui.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiapp.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiview.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uipanel.js"></script>  
-  <script defer type="text/javascript" src="dist/mootorsrc/js/router.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/route.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uinavitem.js"></script>  
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uinavbar.js"></script>  
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiheader.js"></script>  
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uifooter.js"></script>  
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiloading.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiform.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiformvirtualinput.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiformdraw.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiformtext.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiformtextarea.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uiformselect.js"></script>
-  <script defer type="text/javascript" src="dist/mootorsrc/js/uibutton.js"></script>
+  <script defer type="text/javascript" src="dist/js/mootor.js"></script>
+
   <script defer type="text/javascript" src="index.js"></script>
- <!-- <script defer src="http://192.168.1.33:8080/target/target-script-min.js#anonymous"></script>-->
 
 </head>
 
