+ Improvements for UIForm controls, code draft for new control UIFormCamera

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -37,6 +37,7 @@
   <script defer type="text/javascript" src="../../source/js/uiformtext.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformtextarea.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformselect.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformcamera.js"></script>
   <script defer type="text/javascript" src="../../source/js/uibutton.js"></script>
   <script defer type="text/javascript" src="index.js"></script>
  <!-- <script defer src="http://192.168.1.33:8080/target/target-script-min.js#anonymous"></script>-->
