--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="dist/css/mootor.css">
   <link rel="stylesheet" href="dist/css/color.css">
+  <link rel="stylesheet" href="dist/css/icons.css">
   
   <script defer type="text/javascript" src="dist/js/zepto.js"></script>
   <script defer type="text/javascript" src="dist/js/zepto-touch.js"></script>
