+ Bugfixes. + Draft for UIFormTime,UIFormDate

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="../../source/css/mootor.css">
   <link rel="stylesheet" href="../../source/css/color.css">
+  <link rel="stylesheet" href="../../source/css/icons.css">
 
   <script defer type="text/javascript" src="../../dist/js/zepto.js"></script>
   <script defer type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
@@ -38,6 +39,8 @@
   <script defer type="text/javascript" src="../../source/js/uiformtextarea.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformselect.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformcheckbox.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformdate.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformtime.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformoption.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformcamera.js"></script>
   <script defer type="text/javascript" src="../../source/js/uibutton.js"></script>
