+ UIFormCameraSingle, UIFormGeo, UIFormDraw (all working ok)

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -34,7 +34,6 @@
   <script defer type="text/javascript" src="../../source/js/uiloading.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiform.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformvirtualinput.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformdraw.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformtext.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformtextarea.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformselect.js"></script>
@@ -42,8 +41,10 @@
   <script defer type="text/javascript" src="../../source/js/uiformdate.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformtime.js"></script>
   <script defer type="text/javascript" src="../../source/js/uiformoption.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformcamera.js"></script>
   <script defer type="text/javascript" src="../../source/js/uibutton.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformdraw.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformcamerasingle.js"></script>
+  <script defer type="text/javascript" src="../../source/js/uiformgeo.js"></script>
   <script defer type="text/javascript" src="index.js"></script>
  <!-- <script defer src="http://192.168.1.33:8080/target/target-script-min.js#anonymous"></script>-->
 
