--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <h1><img src="img/logo.png" /></h1>
+        <h1><img class="applogo" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" /></h1>
     </header>
 </body>
 </html>
