+ Angular example app with experimental module ngMootor and old module mootor-mode.js. Updated old example apps.

--- a/examples/base/index.html
+++ b/examples/base/index.html
@@ -9,9 +9,7 @@
   <link rel="stylesheet" href="mootor/css/mootor.css">
   <link rel="stylesheet" href="mootor/css/color.css">
 
-  <script type="text/javascript" src="mootor/js/zepto.js"></script>
-  <script type="text/javascript" src="mootor/js/clickfix.js"></script>
-  <script type="text/javascript" src="mootor/js/zepto-detect.js"></script>
+  <script type="text/javascript" src="mootor/js/zepto-bundle.js"></script>
   <script type="text/javascript" src="mootor/js/mootor.js"></script>
 
 </head>
