--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -11,9 +11,7 @@
   <link rel="stylesheet" href="../../source/css/color.css">
   <link rel="stylesheet" href="../../source/css/icons.css">
 
-  <script defer type="text/javascript" src="../../dist/js/zepto.js"></script>
-  <script defer type="text/javascript" src="../../dist/js/zepto-touch.js"></script>
-  <script defer type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
+  <script defer type="text/javascript" src="../../dist/js/zepto-bundle.js"></script>
   <script defer type="text/javascript" src="../../source/js/clickfix.js"></script>
   <script defer type="text/javascript" src="../../source/js/scrollfix.js"></script>
   <script defer type="text/javascript" src="../../source/js/mootor.js"></script>
