--- a/source/spec/SpecRunner.html
+++ b/source/spec/SpecRunner.html
@@ -14,25 +14,38 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../../dist/js/zepto.js"></script>
-  <script type="text/javascript" src="../../dist/js/zepto-detect.js"></script>
-  <script type="text/javascript" src="../js/overthrow.min.js"></script>
-
-  <script type="text/javascript" src="../js/mootor.js"></script>
-  <script type="text/javascript" src="../js/event.js"></script>
-  <script type="text/javascript" src="../js/context.js"></script>
-  <script type="text/javascript" src="../js/app.js"></script>
-  <script type="text/javascript" src="../js/view.js"></script>
-  <script type="text/javascript" src="../js/ui.js"></script>
-  <script type="text/javascript" src="../js/uiapp.js"></script>
-  <script type="text/javascript" src="../js/uiview.js"></script>
-  <script type="text/javascript" src="../js/uipanel.js"></script>
-  <script type="text/javascript" src="../js/uinavitem.js"></script>
-  <script type="text/javascript" src="../js/uinavbar.js"></script>
-  <script type="text/javascript" src="../js/uiheader.js"></script>
-  <script type="text/javascript" src="../js/uiloading.js"></script>
-  <script type="text/javascript" src="../js/router.js"></script>
-  <script type="text/javascript" src="../js/route.js"></script>
+  <script defer type="text/javascript" src="../../dist/js/zepto-bundle.js"></script>
+  <script defer type="text/javascript" src="../js/clickfix.js"></script>
+  <script defer type="text/javascript" src="../js/scrollfix.js"></script>
+  <script defer type="text/javascript" src="../js/mootor.js"></script>
+  <script defer type="text/javascript" src="../js/event.js"></script>
+  <script defer type="text/javascript" src="../js/context.js"></script>
+  <script defer type="text/javascript" src="../js/app.js"></script>
+  <script defer type="text/javascript" src="../js/view.js"></script>
+  <script defer type="text/javascript" src="../js/ui.js"></script>
+  <script defer type="text/javascript" src="../js/uiapp.js"></script>
+  <script defer type="text/javascript" src="../js/uiview.js"></script>
+  <script defer type="text/javascript" src="../js/uipanel.js"></script>  
+  <script defer type="text/javascript" src="../js/router.js"></script>
+  <script defer type="text/javascript" src="../js/route.js"></script>
+  <script defer type="text/javascript" src="../js/uinavitem.js"></script>  
+  <script defer type="text/javascript" src="../js/uinavbar.js"></script>  
+  <script defer type="text/javascript" src="../js/uiheader.js"></script>  
+  <script defer type="text/javascript" src="../js/uifooter.js"></script>  
+  <script defer type="text/javascript" src="../js/uiloading.js"></script>
+  <script defer type="text/javascript" src="../js/uiform.js"></script>
+  <script defer type="text/javascript" src="../js/uiformvirtualinput.js"></script>
+  <script defer type="text/javascript" src="../js/uiformtext.js"></script>
+  <script defer type="text/javascript" src="../js/uiformtextarea.js"></script>
+  <script defer type="text/javascript" src="../js/uiformselect.js"></script>
+  <script defer type="text/javascript" src="../js/uiformcheckbox.js"></script>
+  <script defer type="text/javascript" src="../js/uiformdate.js"></script>
+  <script defer type="text/javascript" src="../js/uiformtime.js"></script>
+  <script defer type="text/javascript" src="../js/uiformoption.js"></script>
+  <script defer type="text/javascript" src="../js/uibutton.js"></script>
+  <script defer type="text/javascript" src="../js/uiformdraw.js"></script>
+  <script defer type="text/javascript" src="../js/uiformcamerasingle.js"></script>
+  <script defer type="text/javascript" src="../js/uiformgeo.js"></script>
  
   <!--  include specs here     -->
   <script type="text/javascript" src="AppSpec.js"></script>
@@ -40,7 +53,7 @@
   <script type="text/javascript" src="RouteSpec.js"></script>
   <script type="text/javascript" src="ViewSpec.js"></script>
   <script type="text/javascript" src="ContextSpec.js"></script>
-  <script type="text/javascript" src="EventSpec.js"></script>
+  <script defer type="text/javascript" src="EventSpec.js"></script>
   <script type="text/javascript" src="UIPanelSpec.js"></script>
   <script type="text/javascript" src="UISpec.js"></script>
   <script type="text/javascript" src="UIAppSpec.js"></script>
