Updated specs, demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,19 +10,17 @@
   <link rel="stylesheet" href="dist/css/mootor.css">
   <link rel="stylesheet" href="dist/css/color.css">
   <link rel="stylesheet" href="dist/css/icons.css">
-  
-  <script defer type="text/javascript" src="dist/js/zepto.js"></script>
-  <script defer type="text/javascript" src="dist/js/zepto-touch.js"></script>
-  <script defer type="text/javascript" src="dist/js/zepto-detect.js"></script>
-  <script defer type="text/javascript" src="dist/js/mootor.js"></script>
 
+  <script defer type="text/javascript" src="dist/js/zepto-bundle.js"></script>
+  <script defer type="text/javascript" src="dist/js/mootor.js"></script>
   <script defer type="text/javascript" src="index.js"></script>
+ <!-- <script defer src="http://192.168.1.33:8080/target/target-script-min.js#anonymous"></script>-->
 
 </head>
 
 <body>
     <header>
-        <h1><img class="applogo" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" /></h1>
+        <h1><img src="img/logo.png" /></h1>
     </header>
 </body>
 </html>
