--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -6,7 +6,6 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
-  <link rel="stylesheet" type="text/css" href="../demo/dist/css/mootor.css">
   <link rel="stylesheet" href="css/semantic.css">
 
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
@@ -14,11 +13,12 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../demo/dist/js/zepto.js"></script>
-  <script type="text/javascript" src="../demo/dist/js/zepto-detect.js"></script>
+  <link rel="stylesheet" href="../demo/dist/css/mootor.css">
+  <link rel="stylesheet" href="../demo/dist/css/color.css">
+  <link rel="stylesheet" href="../demo/dist/css/icons.css">
 
-  <script type="text/javascript" src="../demo/dist/js/mootor.js"></script>
-
+  <script defer type="text/javascript" src="../demo/dist/js/zepto-bundle.js"></script>
+  <script defer type="text/javascript" src="../demo/dist/js/mootor.js"></script>
  
   <!--  include specs here     -->
   <script type="text/javascript" src="AppSpec.js"></script>
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="RouteSpec.js"></script>
   <script type="text/javascript" src="ViewSpec.js"></script>
   <script type="text/javascript" src="ContextSpec.js"></script>
-  <script type="text/javascript" src="EventSpec.js"></script>
+  <script defer type="text/javascript" src="EventSpec.js"></script>
   <script type="text/javascript" src="UIPanelSpec.js"></script>
   <script type="text/javascript" src="UISpec.js"></script>
   <script type="text/javascript" src="UIAppSpec.js"></script>
