--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -12,37 +12,7 @@
   <link rel="stylesheet" href="../../source/css/icons.css">
 
   <script defer type="text/javascript" src="../../dist/js/zepto-bundle.js"></script>
-  <script defer type="text/javascript" src="../../source/js/clickfix.js"></script>
-  <script defer type="text/javascript" src="../../source/js/scrollfix.js"></script>
-  <script defer type="text/javascript" src="../../source/js/mootor.js"></script>
-  <script defer type="text/javascript" src="../../source/js/event.js"></script>
-  <script defer type="text/javascript" src="../../source/js/context.js"></script>
-  <script defer type="text/javascript" src="../../source/js/app.js"></script>
-  <script defer type="text/javascript" src="../../source/js/view.js"></script>
-  <script defer type="text/javascript" src="../../source/js/ui.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiapp.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiview.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uipanel.js"></script>  
-  <script defer type="text/javascript" src="../../source/js/router.js"></script>
-  <script defer type="text/javascript" src="../../source/js/route.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uinavitem.js"></script>  
-  <script defer type="text/javascript" src="../../source/js/uinavbar.js"></script>  
-  <script defer type="text/javascript" src="../../source/js/uiheader.js"></script>  
-  <script defer type="text/javascript" src="../../source/js/uifooter.js"></script>  
-  <script defer type="text/javascript" src="../../source/js/uiloading.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiform.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformvirtualinput.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformtext.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformtextarea.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformselect.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformcheckbox.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformdate.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformtime.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformoption.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uibutton.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformdraw.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformcamerasingle.js"></script>
-  <script defer type="text/javascript" src="../../source/js/uiformgeo.js"></script>
+  <script defer type="text/javascript" src="../../dist/js/mootor.js"></script>
   <script defer type="text/javascript" src="index.js"></script>
  <!-- <script defer src="http://192.168.1.33:8080/target/target-script-min.js#anonymous"></script>-->
 
