--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -33,12 +33,9 @@
   <script type="text/javascript" src="UIViewSpec.js"></script>
   <script type="text/javascript" src="UILoadingSpec.js"></script>
   <script type="text/javascript" src="UIHeaderSpec.js"></script>
-<!--  <script type="text/javascript" src="UINavItemSpec.js"></script>
-  <script type="text/javascript" src="UINavBarSpec.js"></script>-->
+  <script type="text/javascript" src="UINavItemSpec.js"></script>
+  <script type="text/javascript" src="UINavBarSpec.js"></script>
   <script type="text/javascript" src="UIFormSpec.js"></script>
-  <script type="text/javascript" src="UIModalSpec.js"></script>
-  <script type="text/javascript" src="UIOverlaySpec.js"></script>
-  <script type="text/javascript" src="UIMapSpec.js"></script>
 
 
 </head>
